tests/NormalTests/paczka1/small_fuzzy/32796516.err
Error in line 5: A168 A168 14,
Error in line 12: tSi A64 70,0
